UpdateHistoryRequest
Tests for UpdateHistoryRequest